# surfreport

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml  release.yml  tests.yml
data/: surfline.py
src/surf_report/: main.py  ui.py
src/surf_report/providers/: surfline.py
src/surf_report/providers/surfline/: processing.py  surfline.py  ui.py
src/surf_report/utils/: helpers.py  logger.py
surf_report/: main.py  ui.py
surf_report/data/: surfline.py
surf_report/utils/: helpers.py
tests/: conftest.py
tests/fixtures/: useragents_me_sample.html
tests/fixtures/surfline/: search_success.json  spot_forecast.json  spot_report_endpoints.json  taxonomy_response.json
tests/providers/surfline/: test_processing.py  test_surfline_api.py  test_ui.py
tests/utils/: test_user_agent.py
utils/: helpers.py
