[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surfreport"
version = "0.0.1"
requires-python = ">=3.10"
description = "Get the surf report in your terminal"
authors = [{ name = "jtabke" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["surf", "surf report", "weather", "ocean"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["ruff", "pyright"]

[project.urls]
homepage = "https://github.com/jtabke/surfreport"
repository = "https://github.com/jtabke/surfreport"

[tool.ruff]
extend-select = ["I"] # Adds import sorting to existing rules

[project.scripts]
surfreport = "surf_report.main:main"
